--- a/biodata.html
+++ b/biodata.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./biodata.css">
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="./gallery.html">
 </head>
 <body>
     <!--Ini bagian navbar-->
@@ -22,7 +23,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Biodata Saya</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Gallery</a>
+                <a class="nav-link" href="./gallery.html">Gallery</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -89,7 +90,7 @@
                                 <div class="col-5">
                                     Surel
                                 </div>
-                                <div class="col-7">
+                                <div class="col-7 mb-4">
                                     <a href="mailto:rosanoviasari@gmail.com">rosanoviasari@gmail.com</a>
                                 </div>
                             </div>
@@ -114,38 +115,10 @@
                         <!-- My Experience -->
                         <div class="col-sm-6">
                             <h4>My Experience</h4>
-                            <ul>
-                                <li>
-                                    Directorate of International Affairs - Email and Administration Staff - (2021)
-                                <ul>
-                                    <li>
-                                        Membuat pencatatan surat masuk dan surat keluar
-                                    </li>
-                                    <li>
-                                        Membuat dokumen MoU antara pihak kampus dengan kampus luar negeri
-                                    </li>
-                                    <li>
-                                        Melaksanakan acara pertukaran budaya antar kampus UPI, Hirosima university, dan Universiti Sains Malaysia
-                                    </li>
-                                </ul>
-                                </li>
-                                <li>
-                                    TK Negeri Centeh - Staff Administrasi - (2021-2022)
-                                    <ul>
-                                        <li>
-                                            Membuat kelengkapan administrasi seperti surat, laporan kegiatan, dan laporan keuangan
-                                        </li>
-                                        <li>
-                                            Melakukan pencatatan surat masuk dan surat keluar
-                                        </li>
-                                        <li>
-                                            Membuat dokumentasi sekolah seperti konten instagram, video youtube, dan tiktok
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    Educourse.id - Coding Teacher for K-12 - (2023-Sekarang)
-                                    <ul>
+                            <ul class="job-list">
+                                <li class="job-title">
+                                    Educourse.id - Coding Teacher for K-12 (2023-Sekarang)
+                                    <ul class="job-desc">
                                         <li>
                                             Membuat dokumen administratif pembelajaran (perencanaan, project, rapor)
                                         </li>
@@ -157,13 +130,58 @@
                                         </li>
                                     </ul>
                                 </li>
+                                <li class="job-title">
+                                    TK Negeri Centeh - Staff Administrasi  (2021-2022)
+                                    <ul class="job-desc">
+                                        <li>
+                                            Membuat kelengkapan administrasi seperti surat, laporan kegiatan, dan laporan keuangan
+                                        </li>
+                                        <li>
+                                            Melakukan pencatatan surat masuk dan surat keluar
+                                        </li>
+                                        <li>
+                                            Membuat dokumentasi sekolah seperti konten instagram, video youtube, dan tiktok
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="job-title">
+                                    Directorate of International Affairs - Email and Administration Staff  (2021)
+                                    <ul class="job-desc">
+                                        <li>
+                                            Membuat pencatatan surat masuk dan surat keluar
+                                        </li>
+                                        <li>
+                                            Membuat dokumen MoU antara pihak kampus dengan kampus luar negeri
+                                        </li>
+                                        <li>
+                                            Melaksanakan acara pertukaran budaya antar kampus UPI, Hirosima university, dan Universiti Sains Malaysia
+                                        </li>
+                                    </ul>
+                                </li>
                             </ul>
+                            <h4>Tools Used</h4>
+                             <!-- Bahasa pemrograman -->
+                             <div class="program-container">
+                                <ul class="program-list">
+                                    <li class="program-item">
+                                        <a href=""><i class="fa-brands fa-html5"></i></a>
+                                    </li>
+                                    <li class="program-item">
+                                        <a href=""><i class="fa-brands fa-css3-alt"></i></a>
+                                    </li>
+                                    <li class="program-item">
+                                        <a href=""><i class="fa-brands fa-github"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- Bahasa Pemrograman -->
                         </div>
                         <!-- End of My Experience -->
                     </div>
                 </div>
             </div>
         </div>
+        <!-- End of content section -->
     </div>
 
     <!--Ini Footer-->
