--- a/biodata.html
+++ b/biodata.html
@@ -13,7 +13,7 @@
     <!--Ini bagian navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Rosa Noviasari's Profile</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,12 +27,11 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Lainnya tentang saya
+                Blog saya
                 </a>
                 <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="../artikel/daftar.html">Daftar Artikel</a></li>
+                <li><a class="dropdown-item" href="./artikel/form.html">Buat Artikel</a></li>
                 </ul>
             </li>
             </ul>
@@ -52,7 +51,7 @@
                             <h1 class="text-bold mb-4">Rosa Noviasari</h1>
                             <hr class="mt-4 mb-2">
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-12 col-sm-6 ">
                             <!-- About -->
                             <div class="row">
                                 <div class="col-12 mb-3">
@@ -100,20 +99,20 @@
                             <div class="socmed-container">
                                 <ul class="social-list">
                                     <li class="social-item">
-                                        <a href=""><i class="fa-brands fa-facebook"></i>Facebook</a>
+                                        <a href="https://www.facebook.com/rosa.noviasari/"><i class="fa-brands fa-facebook"></i>Facebook</a>
                                     </li>
                                     <li class="social-item">
-                                        <a href=""><i class="fa-brands fa-instagram"></i>Instagram</a>
+                                        <a href="https://www.instagram.com/rosanoviasari/"><i class="fa-brands fa-instagram"></i>Instagram</a>
                                     </li>
                                     <li class="social-item">
-                                        <a href=""><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+                                        <a href="https://id.linkedin.com/in/rosa-noviasari"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
                                     </li>
                                 </ul>
                             </div>
                             <!-- End of Social Media -->
                         </div>
                         <!-- My Experience -->
-                        <div class="col-sm-6">
+                        <div class="col-12 col-sm-6">
                             <h4>My Experience</h4>
                             <ul class="job-list">
                                 <li class="job-title">
@@ -160,7 +159,7 @@
                                 </li>
                             </ul>
                             <h4>Tools Used</h4>
-                             <!-- Bahasa pemrograman -->
+                             <!-- Tools Used -->
                              <div class="program-container">
                                 <ul class="program-list">
                                     <li class="program-item">
@@ -174,7 +173,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!-- Bahasa Pemrograman -->
+                            <!-- End of Tools Used -->
                         </div>
                         <!-- End of My Experience -->
                     </div>
