--- a/gallery.html
+++ b/gallery.html
@@ -12,26 +12,25 @@
     <!--Ini bagian navbar-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
         <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Rosa Noviasari's Profile</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="biodata.html">Biodata Saya</a>
+                <a class="nav-link" href="biodata.html">Biodata Saya</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./gallery.html">Gallery</a>
+                <a class="nav-link active" aria-current="page" href="./gallery.html">Gallery</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Lainnya tentang saya
+                Blog saya
                 </a>
                 <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
+                <li><a class="dropdown-item" href="../artikel/daftar.html">Daftar Artikel</a></li>
+                <li><a class="dropdown-item" href="./artikel/form.html">Buat Artikel</a></li>
                 </ul>
             </li>
             </ul>
@@ -52,13 +51,13 @@
                                 <div id="carouselExample" class="carousel slide">
                                     <div class="carousel-inner">
                                       <div class="carousel-item active">
-                                        <a href="./assets/image/princessgroup.jpeg"><img src="./assets/image/princessgroup.jpeg" class="d-block w-100" alt="..."></a>
+                                        <a href="./assets/image/mengajar ekskul.jpg"><img src="./assets/image/mengajar ekskul.jpg" class="d-block w-100" alt="..."></a>
                                       </div>
                                       <div class="carousel-item">
-                                        <a href="./assets/image/princessgroup.jpeg"><img src="./assets/image/princessgroup.jpeg" class="d-block w-100" alt="..."></a>
+                                        <a href="./assets/image/smktelkombdg.jpg"><img src="./assets/image/smktelkombdg.jpg" class="d-block w-100" alt="..."></a>
                                       </div>
                                       <div class="carousel-item">
-                                        <a href="./assets/image/princessgroup.jpeg"><img src="./assets/image/princessgroup.jpeg" class="d-block w-100" alt="..."></a>
+                                        <a href="./assets/image/alfatwa1.jpg"><img src="./assets/image/alfatwa1.jpg" class="d-block w-100" alt="..."></a>
                                       </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -73,16 +72,29 @@
                             </div>
                         </div>
                         <!-- End of Carousell -->
-                        <div class="row">
-                            <!-- Full screen modal -->
-                            <div class="col-sm-4">
-                                <a href="./assets/image/disney-princess-card.png"><img src="./assets/image/disney-princess-card.png" class="gambar-biasa" width="300px"></a>
+                        <div class="row mb-4">
+                            <div class="col-sm-4" align="center">
+                                <a href="./assets/image/ekskul1.jpg"><img src="./assets/image/ekskul1.jpg" class="gambar-biasa" width="300px"></a>
                             </div>
-                            <div class="col-sm-4">
-                                <a href="./assets/image/disney-princess-card.png"><img src="./assets/image/disney-princess-card.png" class="gambar-biasa" width="300px"></a>
+                            <div class="col-sm-4" align="center">
+                                <a href="./assets/image/ekskul 2.jpg"><img src="./assets/image/ekskul 2.jpg" class="gambar-biasa" width="300px"></a>
                             </div>
-                            <div class="col-sm-4">
-                                <a href="./assets/image/disney-princess-card.png"><img src="./assets/image/disney-princess-card.png" class="gambar-biasa" width="300px"></a>
+                            <div class="col-sm-4" align="center">
+                                <a href="./assets/image/alfatwa2.jpg"><img src="./assets/image/alfatwa2.jpg" class="gambar-biasa" width="300px"></a>
+                            </div>
+                        </div>
+                        <div class="row mb-4">
+                            <div class="col-sm-3" align="center">
+                                <a href="./assets/image/ekskul1.jpg"><img src="./assets/image/ekskul1.jpg" class="gambar-biasa" width="300px"></a>
+                            </div>
+                            <div class="col-sm-3" align="center">
+                                <a href="./assets/image/ekskul 2.jpg"><img src="./assets/image/ekskul 2.jpg" class="gambar-biasa" width="300px"></a>
+                            </div>
+                            <div class="col-sm-3" align="center">
+                                <a href="./assets/image/alfatwa2.jpg"><img src="./assets/image/alfatwa2.jpg" class="gambar-biasa" width="300px"></a>
+                            </div>
+                            <div class="col-sm-3" align="center">
+                                <a href="./assets/image/ekskul1.jpg"><img src="./assets/image/ekskul1.jpg" class="gambar-biasa" width="300px"></a>
                             </div>
                         </div>
                     </div>
