--- a/artikel/detail.html
+++ b/artikel/detail.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../biodata.css">
     <link rel="stylesheet" href="../assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../gallery.html">
+    <link rel="stylesheet" href="../content-style.css">
 </head>
 <body>
     <!--Ini bagian navbar-->
@@ -20,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Biodata Saya</a>
+                <a class="nav-link" aria-current="page" href="../biodata.html">Biodata Saya</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../gallery.html">Gallery</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Blog saya
                 </a>
                 <ul class="dropdown-menu">
@@ -45,12 +46,29 @@
             <div class="card">
                 <div class="card-body">
                     <a href="./daftar.html" class="btn btn-outline-secondary"><i class="fa-solid fa-arrow-left"></i> Kembali ke daftar</a>
-                    <img src="../assets/image/alfatwa1.jpg" class="card-img-top" alt="belajar-coding" width="300">
+                    <img src="../assets/image/alfatwa1.jpg" class="card-img-top" alt="belajar-coding" width="300px">
                     <h1>Belajar membuat animasi "Indonesian Map" menggunakan Scratch</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam dignissimos in incidunt, deleniti enim veritatis perferendis at nihil aperiam minus iure possimus quis id tempora doloremque nostrum, alias dolores quae!</p>
+                    <p>Belajar membuat animasi Indonesian Map menggunakan Visual Programming Platform, Scratch.</p>
+                    <p>Kegiatan ini dilaksanakan setiap hari Selasa, di SD Plus Al-fatwa.</p>
+                    <p>Peserta kegiatan ini berasal dari kelas 1, 3, dan 5</p>
+                    <p>Seluruh peserta merasa antusias dan senang saat belajar menggunakan Scratch</p>
                 </div>
             </div>
+            <br><br>
             <p><strong>Share to:</strong></p>
+            <div class="socmed-container">
+                <ul class="social-list">
+                    <li class="social-item">
+                        <a href="https://www.facebook.com/rosa.noviasari/"><i class="fa-brands fa-facebook"></i>Facebook</a>
+                    </li>
+                    <li class="social-item">
+                        <a href="https://www.instagram.com/rosanoviasari/"><i class="fa-brands fa-instagram"></i>Instagram</a>
+                    </li>
+                    <li class="social-item">
+                        <a href="https://id.linkedin.com/in/rosa-noviasari"><i class="fa-brands fa-linkedin"></i>LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <!-- End of content section -->
     </div>
