--- a/biodata.html
+++ b/biodata.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./biodata.css">
     <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="./gallery.html">
+    <link rel="stylesheet" href="../belajar-bootstrap/content-style.css">
 </head>
 <body>
     <!--Ini bagian navbar-->
