--- a/artikel/daftar.html
+++ b/artikel/daftar.html
@@ -20,18 +20,18 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Biodata Saya</a>
+                <a class="nav-link" aria-current="page" href="../biodata.html">Biodata Saya</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../gallery.html">Gallery</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Blog saya
                 </a>
                 <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Daftar Artikel</a></li>
-                <li><a class="dropdown-item" href="#">Buat Artikel</a></li>
+                <li><a class="dropdown-item" href="./form.html">Buat Artikel</a></li>
                 </ul>
             </li>
             </ul>
@@ -51,7 +51,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="../assets/image/mengajar ekskul.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Belajar Coding di SMAN 20 Bandung</h5>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                   <a href="./detail.html" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -61,7 +61,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="../assets/image/mengajar ekskul.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Belajar Coding di SMAN 20 Bandung</h5>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                   <a href="./detail.html" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -71,7 +71,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="../assets/image/mengajar ekskul.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Belajar Coding di SMAN 20 Bandung</h5>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                   <a href="./detail.html" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -81,7 +81,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="../assets/image/mengajar ekskul.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Belajar Coding di SMAN 20 Bandung</h5>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                   <a href="./detail.html" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -95,7 +95,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="../assets/image/mengajar ekskul.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Belajar Coding di SMAN 20 Bandung</h5>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                   <a href="./detail.html" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -105,7 +105,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="../assets/image/mengajar ekskul.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Belajar Coding di SMAN 20 Bandung</h5>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                   <a href="./detail.html" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -115,7 +115,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="../assets/image/mengajar ekskul.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Belajar Coding di SMAN 20 Bandung</h5>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                   <a href="./detail.html" class="btn btn-primary">Go somewhere</a>
                                 </div>
@@ -125,7 +125,7 @@
                             <div class="card" style="width: 18rem;">
                                 <img src="../assets/image/mengajar ekskul.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                  <h5 class="card-title">Card title</h5>
+                                  <h5 class="card-title">Belajar Coding di SMAN 20 Bandung</h5>
                                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                   <a href="./detail.html" class="btn btn-primary">Go somewhere</a>
                                 </div>
