--- a/artikel/form.html
+++ b/artikel/form.html
@@ -20,13 +20,13 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Biodata Saya</a>
+                <a class="nav-link" aria-current="page" href="../biodata.html">Biodata Saya</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="../gallery.html">Gallery</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Blog saya
                 </a>
                 <ul class="dropdown-menu">
