--- a/biodata.html
+++ b/biodata.html
@@ -31,7 +31,7 @@
                 Blog saya
                 </a>
                 <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="../artikel/daftar.html">Daftar Artikel</a></li>
+                <li><a class="dropdown-item" href="./artikel/daftar.html">Daftar Artikel</a></li>
                 <li><a class="dropdown-item" href="./artikel/form.html">Buat Artikel</a></li>
                 </ul>
             </li>
